# lambda

./: .gitignore  LICENSE  Makefile  README.md  lambda.cabal
lib/: DeBruijn.hs  Lambda.hs  Naive.hs  Simple.hs
lib/Extended/: DeBruijn.hs  Lambda.hs  Naive.hs  Types.hs
lib/Typed/: DeBruijn.hs  Lambda.hs  Naive.hs
lib/Untyped/: DeBruijn.hs  Lambda.hs  Naive.hs
