cabal-version:       2.4
name:                lambda
version:             0.1.0.0
synopsis:            Simple lambda calculus interpreter.
homepage:            https://github.com/jtpaasch/lambda
license:             BSD-3-Clause
license-file:        LICENSE
author:              JT Paasch
maintainer:          jt.paasch@gmail.com
category:            Language
extra-source-files:  README.md

library
  exposed-modules:     Untyped.Naive, Untyped.Lambda, Untyped.DeBruijn,
                       Typed.Naive, Typed.Lambda
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, containers
  hs-source-dirs:      lib
  default-language:    Haskell2010
